--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,8 @@ add_subdirectory(thirdparty/raudio)
 add_subdirectory(thirdparty/glm)
 add_subdirectory(thirdparty/imgui-docking)
 
+add_subdirectory(core)
+
 add_subdirectory(engineRuntime)
 add_subdirectory(componentExample)
 
