renamed components to modules

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,7 +19,7 @@ add_subdirectory(thirdparty/imgui-docking)
 add_subdirectory(core)
 
 add_subdirectory(engineRuntime)
-add_subdirectory(componentExample)
+add_subdirectory(moduleExample)
 
 
 
