--- a/engineRuntime/CMakeLists.txt
+++ b/engineRuntime/CMakeLists.txt
@@ -36,4 +36,4 @@ target_include_directories("${CMAKE_PROJECT_NAME}" PUBLIC "${CMAKE_CURRENT_SOURC
 
 
 target_link_libraries("${CMAKE_PROJECT_NAME}" PRIVATE glm glfw 
-	glad stb_image stb_truetype raudio imgui componentExample core)
+	glad stb_image stb_truetype raudio imgui moduleExample core)
