added string manipulation skafolding

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,7 @@ add_subdirectory(thirdparty/imgui-docking)
 add_subdirectory(core)
 
 add_subdirectory(engineRuntime)
+add_subdirectory(stringManipulation)
 add_subdirectory(moduleExample)
 add_subdirectory(window)
 
