--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,7 @@ add_subdirectory(core)
 
 add_subdirectory(engineRuntime)
 add_subdirectory(stringManipulation)
+add_subdirectory(fileManipulation)
 add_subdirectory(moduleExample)
 add_subdirectory(window)
 
