--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,7 @@ add_subdirectory(stringManipulation)
 add_subdirectory(fileManipulation)
 add_subdirectory(moduleExample)
 add_subdirectory(window)
+add_subdirectory(math)
 
 
 
