- Added standard output logging - Added file logging - Added logger class - Fix minor mistakes, such as spelling, in various files - Added logger test to engineRuntime/main.cpp
Signed-off-by: averyocean65 <averytoad65@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,4 @@ add_subdirectory(stringManipulation)
 add_subdirectory(fileManipulation)
 add_subdirectory(moduleExample)
 add_subdirectory(window)
-
-
-
+add_subdirectory(logger)
