--- a/fileManipulation/CMakeLists.txt
+++ b/fileManipulation/CMakeLists.txt
@@ -2,5 +2,5 @@ cmake_minimum_required(VERSION 3.16)
 
 project(fileManipulation)
 include(../ModuleCommon.cmake)
-# target_link_libraries(${PROJECT_NAME} PUBLIC glm) #optionally link with other modules or libraries
 
+target_link_libraries(${PROJECT_NAME} PRIVATE logger)
