Added Logger and Windows File Manipulation
Signed-off-by: averyocean65 <averytoad65@gmail.com>

--- a/logging/CMakeLists.txt
+++ b/logging/CMakeLists.txt
@@ -2,5 +2,5 @@ cmake_minimum_required(VERSION 3.16)
 
 project(logging)
 include(../ModuleCommon.cmake)
-# target_link_libraries(${PROJECT_NAME} PUBLIC glm) #optionally link with other modules or libraries
+target_link_libraries(${PROJECT_NAME} PRIVATE fileManipulation)
 
