--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,3 +25,4 @@ add_subdirectory(stringManipulation)
 add_subdirectory(fileManipulation)
 add_subdirectory(moduleExample)
 add_subdirectory(window)
+add_subdirectory(testing)
