--- a/fileManipulation/CMakeLists.txt
+++ b/fileManipulation/CMakeLists.txt
@@ -1,4 +1,7 @@
 cmake_minimum_required(VERSION 3.16)
 
 project(fileManipulation)
+
 include(../ModuleCommon.cmake)
+
+target_link_libraries(${PROJECT_NAME} PRIVATE logging)
